# cairn

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cairn.config.example.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
hooks/: hooks.json
skills/cairn/: SKILL.md
skills/cairn/reference/: claude.md  codex.md  cursor.md  granola.md  service-docs.md
skills/cairn/schema/: tags.yaml
skills/cairn/workflows/: log-session.md
skills/recall/: SKILL.md
skills/search/: SKILL.md
skills/setup/: SKILL.md
src/cairn/: __init__.py  __main__.py  admin.py  cli.py  config.py  frontmatter.py  jsonl.py  listing.py  mutations.py  paths.py  projects.py  qmd.py  recall.py  rendering.py  schema.py  sync.py  timeutil.py
src/cairn/sources/: __init__.py  base.py  claude.py  codex.py  cursor.py  granola.py  service_docs.py
tests/: test_admin_config.py  test_config.py  test_config_as_data.py  test_config_examples.py  test_frontmatter.py  test_jsonl.py  test_plugin_manifest.py  test_qmd_collections.py  test_recall.py  test_rendering.py  test_sources.py  test_sources_export.py
