[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cairn"
dynamic = ["version"]
description = "Local, searchable memory for AI coding agents - Claude Code, Codex, Cursor & Granola, indexed on-device with QMD."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []  # standard library only - clone and run

[project.optional-dependencies]
granola = ["cryptography"]  # only needed to decrypt Granola's local stores

[project.scripts]
cairn = "cairn.__main__:main"

[project.urls]
Repository = "https://github.com/shavvimal/cairn"

[tool.hatch.version]
path = "src/cairn/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cairn"]

# Dev tooling stays OUT of the wheel (runtime dependencies remain []).
[dependency-groups]
dev = ["ruff>=0.15.19", "mypy>=1.11"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # ruff format owns line length

[tool.ruff.lint.isort]
known-first-party = ["cairn"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = false

# `cryptography` is an optional extra (granola only) - no stub when uninstalled.
[[tool.mypy.overrides]]
module = "cryptography.*"
ignore_missing_imports = true
